--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,14 @@
   <script src="//unpkg.com/mithril/mithril.js"></script>
   <script src="js/app.js"></script>
 
-  <script src="/__/firebase/4.1.3/firebase-app.js"></script>
-  <script src="/__/firebase/4.1.3/firebase-auth.js"></script>
-  <script src="/__/firebase/4.1.3/firebase-database.js"></script>
-  <script src="/__/firebase/4.1.3/firebase-messaging.js"></script>
+  <script src="/__/firebase/4.8.1/firebase-app.js"></script>
+  <script src="/__/firebase/4.8.1/firebase-auth.js"></script>
+  <script src="/__/firebase/4.8.1/firebase-database.js"></script>
+  <script src="/__/firebase/4.8.1/firebase-firestore.js"></script>
+  <script src="/__/firebase/4.8.1/firebase-messaging.js"></script>
 
   <!-- Leave out Storage -->
-  <!-- <script src="/__/firebase/4.1.3/firebase-storage.js"></script> -->
+  <!-- <script src="/__/firebase/4.8.1/firebase-storage.js"></script> -->
 
   <script src="/__/firebase/init.js"></script>
   
