--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
   <title>smartthings-log</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400" rel="stylesheet">
   <link rel="stylesheet" href="css/spectre.min.css" />
   <link rel="stylesheet" href="style.css">
 
