--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
-  <script src="//unpkg.com/mithril/mithril.js"></script>
+  <script src="//unpkg.com/mithril@1.1.7/mithril.js"></script>
   <script src="js/app.js"></script>
 
   <script src="/__/firebase/4.8.1/firebase-app.js"></script>
